--- a/demo/demo.css
+++ b/demo/demo.css
@@ -158,7 +158,7 @@ body {
     width: 100px;
     height: 600px;
 }
-.pokemon .img {
+.img {
     width: 96px;
     height: 96px;
     display: inline-block;
